<resources>
    <string name="app_name">Paysa</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to create job activity -->
    <string name="action_create_job">Create Job</string>
    <string name="job_title">Title</string>
    <string name="job_description">Description</string>
    <string name="job_location">Location</string>
    <string name="job_wage">Wage</string>

    <!-- Strings related to create user profile activity -->
    <string name="action_create_user_profile">Create User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">Create Account</string>

    <string name="save">Save</string>
    <string name="post">Post</string>

    <!-- Strings related to job information activity -->
    <string name="description">Description</string>
    <string name="about_the_job">About the job</string>

    <!-- Strings related to user profile -->
    <string name="action_profile">Profile</string>
    <string name="about">About</string>
    <string name="contact_information">Contact Information</string>
    <string name="seen_only_offered">Seen only by offered jobs</string>

    <!-- Shared Preferences -->
    <string name="saved_is_logged_in">saved_is_logged_in</string>
    <string name="saved_email">saved_email</string>
    <string name="saved_password">saved_password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
