<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.paysa.presentation.ui.activities.CreateJobActivity"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/job_title_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/job_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/job_title"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:focusable="false">

        <EditText
            android:id="@+id/job_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/job_description"
            android:onClick="showJobDescription"
            android:focusable="false"
            android:maxLines="1"
            android:ellipsize="end"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="25mm"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sideMargin"
            android:layout_marginRight="@dimen/sideMargin"
            android:focusable="false">

            <EditText
                android:id="@+id/wage_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/job_wage"
                android:maxLines="1"
                android:ellipsize="end"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/wage_spinner"
            android:layout_width="20mm"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/sideMargin"
            android:layout_marginLeft="@dimen/sideMargin"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:focusable="false">

        <EditText
            android:id="@+id/job_location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/job_location"
            android:onClick="showGoogleMapsLocation"
            android:focusable="false" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/start_date_text_view"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="Date"
            android:onClick="showDatePickerDialog"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="@dimen/sideMargin"
            android:background="?selectableItemBackground"/>

        <TextView
            android:id="@+id/start_time_text_view"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:text="Time"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:background="?selectableItemBackground"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/end_date_text_view"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="Date"
            android:onClick="showDatePickerDialog"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="@dimen/sideMargin"
            android:background="?selectableItemBackground"/>

        <TextView
            android:id="@+id/end_time_text_view"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:text="Time"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:background="?selectableItemBackground"/>
    </LinearLayout>


</LinearLayout>
