<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.activities.EmployerProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_employer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardImageHeight"
                    android:scaleType="fitXY"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_employer_logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FFFFFF"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp">

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/jobInformationTextSize1"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:paddingBottom="@dimen/jobInformationHeaderPadding"
                        android:text="@string/about"/>

                    <TextView
                        android:id="@+id/tv_employer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/jobInformationTextSize1"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:layout_below="@id/about"
                        android:textStyle="bold"
                        android:text="Employer"/>

                    <TextView
                        android:id="@+id/tv_employer_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:textSize="@dimen/jobInformationTextSize3"
                        android:layout_below="@id/tv_employer_name"
                        android:text="Location"/>


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp">

                    <TextView
                        android:id="@+id/tv_contact_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/jobInformationTextSize1"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:paddingBottom="@dimen/jobInformationHeaderPadding"
                        android:text="@string/contact_information"/>

                    <TextView
                        android:id="@+id/tv_employer_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:textSize="@dimen/jobInformationTextSize2"
                        android:text="@string/phone_number"
                        android:autoLink="phone"
                        android:textColorLink="@color/link_color"/>

                    <TextView
                        android:id="@+id/tv_employer_email"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:textSize="@dimen/jobInformationTextSize2"
                        android:text="@string/email_address"
                        android:autoLink="email"
                        android:textColorLink="@color/link_color" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
