<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardImageHeight"
                android:scaleType="fitXY"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aboutb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/jobInformationTextSize1"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:paddingBottom="@dimen/jobInformationHeaderPadding"
                        android:text="@string/about"/>

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/jobInformationTextSize1"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:text="Name"/>

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:textSize="@dimen/jobInformationTextSize2"
                        android:text="Location"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp">

                    <TextView
                        android:id="@+id/contact_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/jobInformationTextSize1"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:text="@string/contact_information"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/jobInformationTextSize4"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:paddingBottom="@dimen/jobInformationHeaderPadding"
                        android:text="@string/seen_only_offered"/>

                    <TextView
                        android:id="@+id/tv_user_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:textSize="@dimen/jobInformationTextSize2"
                        android:text="Phone Number" />

                    <TextView
                        android:id="@+id/tv_user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/jobInformationSideMargin"
                        android:layout_marginRight="@dimen/jobInformationSideMargin"
                        android:textSize="@dimen/jobInformationTextSize2"
                        android:text="Email" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>